<resources>
    <string name="app_name">Storecode</string>
    <string name="name_product">Nombre del producto: </string>
    <string name="description_product">Descripción: </string>
    <string name="price_product">Precio: $</string>
    <string name="stock_products">Productos existentes: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_tv_elegir_preciador">Elige el preciador  que vas a colocar</string>
    <string name="drawer_configura_preciador">Configura el preciador de forma sencilla</string>
    <string name="fragment_boton_unico_preciador">Único</string>
    <string name="fragment_boton_multiples_precios">Múltiple</string>
    <string name="fragment_boton_configurar">Configurar</string>
    <string name="activity_preciador_unico_selecionar_datos">Selecciona los datos del equipo para generar su  preciador</string>
    <string name="alert_dialog_tablet">Estás intentando ingresar desde un celular, para colocar un preciador múltiple es necesario ingresar desde una tablet.</string>
    <string name="alert_dialog_alertacac">Sólo podrás generar preciadores de los equipos registrados en tu centro, en caso de ser solicitado otro, solicita el cambio en LDAP.</string>
    <string name="activity_vistaprevia_confimacion">Confirma que la información sea correcta de lo contrario regresa.</string>
    <string name="consulta_promociones">Consulta las promociones vigentes en www.telcel.com/promociones. Precios publicados incluyen el 16% de IVA.</string>
    <string name="coloca_dispositivos">Debes colocar por lo menos un dispositivo para poder construir el estante</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="preciador1">Preciador1</string>
    <string name="preciador2">Preciador2</string>
    <string name="preciador_telcel">Preciador_telcel</string>
    <string name="preciador3">Preciador3</string>
    <string name="preciador4">Preciador4</string>
    <string name="preciador_publicidad">Preciador_publicidad</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="descargar_apk_title_precio">Descargando Precio Inteligente</string>
    <string name="descargar_apk_precio">Por favor espera mientras se descarga la aplicación Precio Inteligente</string>
    <string name="descargar_apk_title_sma">Descargando SMA</string>
    <string name="descargar_apk_sma">Por favor espera mientras se descarga la aplicación Tapps</string>
    <string name="descargar_video_title">Descargando Multimedia</string>
    <string name="descargar_videos">Por favor espera mientras se descargan los contenidos</string>
    <string name="ingresar_credenciales">Por seguridad debes confirmar\n tu contraseña</string>
    <string name="olvidaste_tu_contraseña_land">Si olvidaste tu contraseña ingresa a https://idm.telcel.com/identity o escribe un correo a \n desaweb.ing@mail.telcel.com</string>
    <string name="olvidaste_tu_contraseña_port">Si olvidaste tu contraseña ingresa a https://idm.telcel.com/identity o escribe un correo a desaweb.ing@mail.telcel.com</string>
    <string name="por_seguridad">Por su seguridad debe confirmar tu contraseña</string>
    <string name="indicaciones_preciador">Al seleccionar continuar se cerrará el configurador. Si requieres modificarlo deberás ingresar nuevamente a la aplicación.</string>
    <string name="onboarding_tittle1">El precio en el celular</string>
    <string name="onboarding_tittle2">Todos los precios en una tableta</string>
    <string name="onboarding_tittle3">Precios siempre vigentes</string>
    <string name="onboarding_tittle4">Modo Retail</string>
    <string name="onboarding_instrucciones1">Olvídate de cortar e imprimir. Ahora es más fácil colocar los preciadores.</string>
    <string name="onboarding_instrucciones2">Muestra los precios de todos los celulares de una mesa o vitrina con una tableta.</string>
    <string name="onboarding_instrucciones3">Configura el preciador una vez y los costos se actualizarán en automático.</string>
    <string name="onboarding_instrucciones4">Podrás evitar modificaciones en la configuración del equipo por parte de los clientes, mostrando siempre el Precio Inteligente.</string>
    <string name="aviso_legal">El pago inicial corresponde a la diferencia a pagar al adquirir el equipo con el Plan Telcel Max Sin Límite 5000 sujeto a un plazo mínimo de contratación de 24 meses. *La cantidad de $170.72 corresponde al cargo mensual cuando el Cliente solicita el financiamiento del Pago Inicial y paga de contado un enganche de $2,456.47. El monto de enganche podrá variar en función del historial crediticio y/o de pago del cliente. FINANCIAMIENTO SUJETO A APROBACIÓN Y EVALUACIÓN DE CAPACIDAD DE PAGO. Total financiado: $4,097.38. Pago Inicial Total financiado: $6,553.85. Cargo Mensual por Servicio (Renta) Plan Telcel Max Sin Límite 5000: $499. Cargo Mensual por Equipo $221.00. Aplica bonificación si se realiza el pago oportuno de Factura. Precios publicados incluyen 16% de IVA.</string>
    <string name="soporte_titulo">Soporte</string>
    <string name="soporte_descripcion"><![CDATA[<b>Si tienes algún problema con el funcionamiento de la aplicación comunícate con soporte técnico a través de <b><font color=#66CFE9>Service Desk</font></b> para levantar un ticket. El tiempo de respuesta es de 24 horas máximo.</b>]]></string>
    <string name="guia_titulo">Guía de uso</string>
    <string name="guia_descripcion">Sección en construcción. \nEstamos trabajando para brindarte la mejor experiencia.</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="completa_datos_en_orden_title">Completa los datos en orden</string>
    <string name="completa_datos_en_orden_desc">Debes completar los datos de arriba hacia abajo</string>
    <string name="completa_todos_los_datos_title">Completa todos \nlos datos</string>
    <string name="completa_todos_los_datos_desc">Para generar el preciador debes completar todos los datos que solicita el equipo</string>
    <string name="button_marca">Marca</string>
    <string name="button_modelo">Modelo</string>
    <string name="button_color">Color (variante)</string>
    <string name="button_plan">Plan</string>
    <string name="msj_error_en_aplicacion">Error en la aplicación, contacte al soporte</string>
    <string name="msj_password_incorrecto">Usuario o password incorrectos</string>
    <string name="footer">Consulta las promociones vigentes en www.telce.com/promociones. Precios publicados incluyen el 16% de IVA</string>
    <string name="boton_entendido">ENTENDIDO</string>
    <string name="boton_continuar">CONTINUAR</string>
    <string name="boton_cancelar">CANCELAR</string>
    <string name="boton_salir">SALIR</string>
    <string name="boton_instalar">INSTALAR</string>
    <string name="boton_crear">CREAR</string>
    <string name="boton_eliminar">ELIMINAR</string>
    <string name="dummy_text">"Lorem ipsum irure  pariatur.  officia deserunt mollit anim id est laborum."</string>
    <string name="ad_agregar_cel_titulo">Agregar celulares</string>
    <string name="ad_agregar_cel_mensaje">Para agregar nuevos celulares el supervisor o\n analista deberá ingresar a http://serviciotecnico:\n8070/mesaExp/ y darlos de alta.</string>
    <string name="ad_agregar_cel_boton">ENTENDIDO</string>
    <string name="ad_mesalista_titulo">¡La mesa está lista!</string>
    <string name="ad_estante_listo_mensaje">Al seleccionar continuar se cerrará el\n configurador. Si requires modificarla deberás\n ingresar nuevamente a la aplicación.</string>
    <string name="ad_vitrinalista_titulo">¡La vitrina está lista!</string>
    <string name="ad_nombrarvitrina_titulo">Vitrina hexagonal nueva</string>
    <string name="ad_nombrarvitrina_mensaje">Escribe un nombre para tu nuevo exhibidor</string>
    <string name="ad_eliminarcelular_titulo">Eliminar celular</string>
    <string name="ad_eliminarcelular_nivel">Eliminar nivel</string>
    <string name="ad_eliminarcelular_mensaje">Si continuas se perderá la configuración y la \n información del celular</string>
    <string name="ad_eliminarnivel_mensaje_desc">Si continuas se perderá la configuración y la \n información del nivel</string>
    <string name="ad_eliminar_vitrina_titulo">Eliminar vitrina</string>
    <string name="ad_eliminar_vitrina_mensaje">Si continuas se perderá la configuración y la \n información de la vitrina</string>
    <string name="ad_eliminarnivel_titulo">Eliminar nivel</string>
    <string name="ad_eliminarnivel_mensaje">Si continuas se perderá la configuración y la \n información del celular</string>
    <string name="ad_salirvitrinahexa_titulo">Configuración de Vitrina Hexagonal</string>
    <string name="ad_salirmesa_titulo">Configuración de Mesa</string>
    <string name="ad_salirvitrinacuadrada_titulo">Configuración de Vitrina Rectangular</string>
    <string name="ad_salirvitrinahexa_mensaje">¿Desea salir de la configuración de la vitrina hexagonal?</string>
    <string name="ad_salirmesa_mensaje">¿Desea salir de la configuración de la mesa?</string>
    <string name="ad_salirvitrinacuadrada_mensaje">¿Desea salir de la configuración de la vitrina rectangular?</string>
    <string name="ad_salirmesacuadrada_mensaje">¿Desea salir de la configuración de la mesa?</string>
    <string name="alert_dialog_colocar_equipo">Para generar el preciador debes colocar al menos un equipo.</string>
    <string name="legal_nuevo_preciador">El pago Inicial corresponde a la diferencia a pagar al adquirir el equipo con el Plan Telcel Max Sin Límite 5000 sujeto a un plazo mínimo de contratación de 24 meses. * La cantidad de $170.72 corresponde al cargo mensual cuando el Cliente solicita el financiamento del Pago Inicial y paga de contado un enganche de $2,456.47. El monto de enganche podrá variar en función del historial crediticio y/o de pago del cliente. FINANCIAMIENTO SUJETO A APROBACIÓN Y EVALUACIÓN DE CAPACIDAD DE PAGO. Total financiado: $4,097.38. Pago Inicial Total financiado; $6,553.85. Cargo Mensual por Servicio (Renta) Plan Telcel Max Sin Límite 5000: $499. Cargo Mensual por Equipo $221.00</string>
    <string name="alert_no_internet_title">Error de conexión</string>
    <string name="alert_no_internet_msg">Hubo un problema con la conexión a internet</string>
    <string name="activity_sample_device_admin">App/Device Admin</string>
    <string name="todo_desglose">TODO</string>
    <string name="version_name">version</string>
    <string name="email_usuario">Email</string>
    <string name="usuario_pass">Contraseña</string>
    <string name="button_sesion">ENTRAR</string>
    <string name="message_sesion">Ingresa los datos para iniciar sesión</string>
    <string name="remember_user">RECORDAR MI USUARIO</string>
    <string name="forget_pass">Si olvidaste tu contraseña ingresa a http://idm.telcel.com/identity o escribe un correo a desaweb.ing@mail.telcel.com</string>
    <string name="error_red_name">¡Ocurrió un error!</string>
    <string name="button_red_name">ENTENDIDO</string>
</resources>