<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="100"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="96"
        android:background="@drawable/background_red_radius"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_h3"
            android:fontFamily="@font/lato_bolt_otf"
            android:gravity="center"
            android:padding="@dimen/padding_h3"
            android:text="@string/error_red_name"
            android:textColor="@color/blanco"
            android:textSize="@dimen/text_h1"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="108dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="100">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_error"
                android:contentDescription="@string/todo_desglose" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_msg_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_h3"
            android:fontFamily="@font/lato_regular_otf"
            android:padding="@dimen/padding_h3"
            android:textColor="@color/blanco"
            android:textSize="@dimen/text_h3"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/alert_dialog_error_red_btn_entendido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_h3"
                android:layout_marginBottom="@dimen/margin_h2"
                android:layout_weight="80"
                android:background="@drawable/btn_alert_dialog_pressed_blanco"
                android:fontFamily="@font/telcel_nova_media_otf"
                android:gravity="center"
                android:padding="@dimen/padding_h2"
                android:text="@string/button_red_name"
                android:textColor="@color/azul_fondo_framgent"
                android:textSize="@dimen/text_h3"
                tools:ignore="SpUsage" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
